add indexer class logic

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "author": "Nyambati Thomas <thomas.nyambati@andela.com>",
   "license": "MIT",
   "dependencies": {
+    "ascii-progress": "^1.0.5",
+    "command-line-args": "^5.0.2",
+    "command-line-usage": "^5.0.5",
+    "dotenv": "^6.2.0",
     "elasticsearch": "^15.3.0",
     "rxjs": "5.2.0"
   }
