--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "elasticsearch",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "bin/cli",
   "repository": "git@github.com:nyambati/elasticsearch.git",
   "author": "Nyambati Thomas <thomas.nyambati@andela.com>",
   "license": "MIT",
+  "bin": {
+    "es": "bin/cli"
+  },
   "dependencies": {
     "ascii-progress": "^1.0.5",
     "cli-table2": "^0.2.0",
-    "command-line-args": "^5.0.2",
     "command-line-usage": "^5.0.5",
     "dotenv": "^6.2.0",
     "elasticsearch": "^15.3.0",
     "minimist": "^1.2.0",
-    "minimist-options": "^4.0.0",
     "rxjs": "5.2.0"
   }
 }
